--- a/src/views/auth/index.css
+++ b/src/views/auth/index.css
@@ -87,15 +87,15 @@ section#entry-page form fieldset ul li input:hover {
   border: 1px solid #aaf;
 }
 section#entry-page form button {
-  padding: 10px;
+  /* padding: 10px; */
   border: 1px solid rgba(0, 0, 0, 0);
   border-radius: 5px;
   /* background: #fff; */
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 section#entry-page form button:hover {
-  /* background-color: #eef;
-  border: 1px solid #aaf; */
+  /* background-color: #eef; */
+  border: 1px solid #aaf;
 }
 
 @media only screen and (min-width: 420px) {
